<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusableInTouchMode="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">


    <LinearLayout

        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            android:src="@drawable/hugh"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            ​

            <EditText

                android:id="@+id/search_std"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="Enter student name"
                android:maxLines="3"
                android:textSize="13dp" />


        </LinearLayout>

        ​


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            ​


            <EditText
                android:id="@+id/spinner"
                android:layout_width="288dp"
                android:layout_height="35dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/edittext"
                android:hint="     Choose year"
                android:textSize="15dp"
                android:textStyle="bold" />

            ​
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            ​

            <CheckBox
                android:id="@+id/chkIos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/chk_ios"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/chkAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/chk_android"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/chkWindows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/chk_windows"
                android:textSize="12dp" />


            <CheckBox
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/hello"
                android:textSize="12dp" />

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/btn_display"
                android:textSize="12dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/btn"
                android:textSize="12dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="19dp"
            android:orientation="horizontal">
            ​


            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginLeft="49dp"
                android:text="Total Cost  -"
                android:textSize="15dp"
                android:textStyle="bold" />


            ​
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_pirates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pirates"
                    android:textSize="13dp" />

                <RadioButton
                    android:id="@+id/radio_ninjas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/ninjas"
                    android:textSize="13dp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            ​

            <EditText

                android:id="@+id/edtCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="Cash"
                android:maxLines="3"
                android:textSize="13dp" />


        </LinearLayout>


        ​

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnReg"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/gradientbuttonstyle"
                android:text="Save"
                android:textColor="#000000"
                android:textSize="13dp" />
        </LinearLayout>
        ​
    </LinearLayout>


</ScrollView>




